--- a/app/src/main/res/layout/fragment_subject_home.xml
+++ b/app/src/main/res/layout/fragment_subject_home.xml
@@ -17,96 +17,118 @@
         android:orientation="vertical"
         android:weightSum="1">
 
-
-        <TableLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
+            android:id="@+id/sensor_container"
             android:background="@drawable/background_rounded_lightgrey"
-            android:paddingBottom="30dp"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:paddingTop="30dp">
+            android:padding="30dp"
+            android:orientation="vertical">
 
-            <TableRow
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:gravity="center_vertical">
+                android:orientation="horizontal"
+                android:id="@+id/respeck_connection_container"
+                android:layout_gravity="center"
+                android:gravity="center">
 
                 <ImageButton
                     android:id="@+id/respeck_pause_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     android:layout_marginRight="10dp"
                     android:background="@drawable/clickable_button_background"
                     android:padding="15dp"
                     android:src="@drawable/ic_pause_black_24dp"/>
 
-                <LinearLayout
+                <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="10dp"
                     android:layout_weight="1"
                     android:foregroundGravity="center"
+                    app:srcCompat="@drawable/vec_respeck"/>
+
+                <LinearLayout
+                    android:layout_width="65dp"
+                    android:layout_height="85dp"
+                    android:orientation="vertical"
+                    android:layout_gravity="center"
                     android:gravity="center">
 
+                    <ProgressBar
+                        android:id="@+id/progress_bar_respeck"
+                        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
+                        android:layout_width="65dp"
+                        android:layout_height="65dp"
+                        android:layout_gravity="center_vertical"
+                        android:visibility="visible"
+                        />
+
                     <ImageView
+                        android:id="@+id/connected_status_respeck"
+                        android:layout_width="65dp"
+                        android:layout_height="65dp"
+                        android:visibility="gone"
+                        app:srcCompat="@drawable/vec_wireless_active"/>
+
+                    <ImageView
+                        android:id="@+id/not_enabled_respeck"
+                        android:layout_width="65dp"
+                        android:layout_height="65dp"
+                        android:src="@drawable/vec_xmark"
+                        android:visibility="gone"/>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:layout_weight="1"
-                        android:foregroundGravity="center"
-                        app:srcCompat="@drawable/vec_respeck"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Battery: 92%"/>
+                        android:orientation="horizontal"
+                        android:layout_gravity="center"
+                        android:gravity="fill_vertical|center">
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0"
+                            android:textSize="15sp"
+                            android:text="92%"/>
+
+                        <ImageView
+                            android:id="@+id/battery_image"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/vec_battery"
+                            android:layout_weight="1"/>
+
+                    </LinearLayout>
+
+
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="92%"/>-->
 
                 </LinearLayout>
 
 
 
-                <ProgressBar
-                    android:id="@+id/progress_bar_respeck"
-                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
-                    android:layout_width="65dp"
-                    android:layout_height="65dp"
-                    android:layout_gravity="center_vertical"
-                    />
+            </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/connected_status_respeck"
-                    android:layout_width="match_parent"
-                    android:layout_height="85dp"
-                    android:layout_weight="0.3"
-                    android:paddingBottom="15dp"
-                    android:paddingTop="15dp"
-                    android:visibility="gone"
-                    app:srcCompat="@drawable/vec_wireless_active"/>
-
-                <ImageView
-                    android:id="@+id/not_enabled_respeck"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/vec_xmark"
-                    android:visibility="gone"/>
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/airspeck_row"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical">
+                android:orientation="horizontal"
+                android:id="@+id/airspeck_connection_container"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_marginTop="40dp">
 
                 <ImageButton
                     android:id="@+id/airspeck_off_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     android:layout_marginRight="10dp"
                     android:background="@drawable/clickable_button_background"
                     android:padding="15dp"
@@ -114,11 +136,11 @@
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
+                    android:layout_height="match_parent"
                     android:layout_marginEnd="20dp"
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/vec_airspeck"/>
+                    app:srcCompat="@drawable/ic_airspeck_new"/>
 
                 <ProgressBar
                     android:id="@+id/progress_bar_airspeck"
@@ -126,139 +148,112 @@
                     android:layout_width="65dp"
                     android:layout_height="65dp"
                     android:layout_gravity="center_vertical"
+                    android:visibility="visible"
                     />
 
                 <ImageView
                     android:id="@+id/connected_status_airspeck"
-                    android:layout_width="match_parent"
-                    android:layout_height="85dp"
-                    android:layout_weight="0.3"
-                    android:paddingBottom="15dp"
-                    android:paddingTop="15dp"
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
                     android:visibility="gone"
                     app:srcCompat="@drawable/vec_wireless_active"/>
 
                 <ImageView
                     android:id="@+id/not_enabled_airspeck"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
                     android:src="@drawable/vec_xmark"
                     android:visibility="gone"/>
-            </TableRow>
 
-        </TableLayout>
+            </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/diary_button"
-            android:layout_width="170dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/clickable_button_background"
-            android:padding="15dp"
-            app:srcCompat="@drawable/vec_diary"/>
-
-        <ImageButton
-            android:id="@+id/rehab_button"
-            android:layout_width="170dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/clickable_button_background"
-            android:padding="15dp"
-            android:visibility="gone"
-            app:srcCompat="@drawable/vec_lungs" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal"
-            android:visibility="gone">
+            android:id="@+id/buttons_container"
+            android:padding="30dp"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center">
 
-            <ImageView
-                android:layout_width="@dimen/button_and_battery_height"
-                android:layout_height="@dimen/button_and_battery_height"
-                android:layout_marginBottom="-10dp"
-                android:layout_marginTop="-10dp"
-                android:layout_weight="0.04"
-                android:rotation="0"
-                android:src="@drawable/vec_battery"/>
+            <ImageButton
+                android:id="@+id/diary_button"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/clickable_button_background"
+                android:padding="15dp"
+                app:srcCompat="@drawable/vec_diary"/>
 
-            <ProgressBar
-                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
-                android:layout_width="103dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="0.91"
-                android:indeterminate="false"
-                android:progress="80"/>
+            <ImageButton
+                android:id="@+id/rehab_button"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/clickable_button_background"
+                android:padding="15dp"
+                android:visibility="gone"
+                app:srcCompat="@drawable/vec_lungs" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/media_buttons_container"
+                android:visibility="gone">
+
+                <ImageButton
+                    android:id="@+id/camera_button"
+                    android:layout_width="0dip"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/clickable_button_background"
+                    android:padding="5dp"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/vec_camera"/>
+
+                <ImageButton
+                    android:id="@+id/video_button"
+                    android:layout_width="0dip"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/clickable_button_background"
+                    android:padding="5dp"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/vec_video"/>
+
+                <ImageButton
+                    android:id="@+id/audio_button"
+                    android:layout_width="0dip"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/clickable_button_background"
+                    android:padding="5dp"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/vec_microphone"/>
+
+                <ImageButton
+                    android:id="@+id/text_button"
+                    android:layout_width="0dip"
+                    android:layout_height="90dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/clickable_button_background"
+                    android:padding="5dp"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/vec_comment"/>
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <TableLayout
-                    android:id="@+id/media_buttons_table"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/background_rounded_lightgrey"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingTop="10dp"
-                    android:visibility="gone">
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical">
-
-                        <ImageButton
-                            android:id="@+id/camera_button"
-                            android:layout_width="0dip"
-                            android:layout_height="90dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/clickable_button_background"
-                            android:padding="5dp"
-                            android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/vec_camera"/>
-
-                        <ImageButton
-                            android:id="@+id/video_button"
-                            android:layout_width="0dip"
-                            android:layout_height="90dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/clickable_button_background"
-                            android:padding="5dp"
-                            android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/vec_video"/>
-
-                        <ImageButton
-                            android:id="@+id/audio_button"
-                            android:layout_width="0dip"
-                            android:layout_height="90dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/clickable_button_background"
-                            android:padding="5dp"
-                            android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/vec_microphone"/>
-
-                        <ImageButton
-                            android:id="@+id/text_button"
-                            android:layout_width="0dip"
-                            android:layout_height="90dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/clickable_button_background"
-                            android:padding="5dp"
-                            android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/vec_comment"/>
-                    </TableRow>
-           </TableLayout>
 
     </LinearLayout>
 
